Increse PermSize of failsafe plugin